--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -7,7 +7,8 @@
 
     .apresentacao p.on {
         font-size: 0.9rem;
-        width: 390px;
+        width: 350px;
+        text-align: start;
     }
 
     .apresentacao .buttons {
