--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,9 @@
 }
 
 body {
-    background-color: #506ee5;
+    background-color: #ffffff;
     font-family: 'Poppins';
-    color: #16083d
+    color: #000000
 }
 
 .hero main {
@@ -80,8 +80,8 @@ body {
 #player {
     background-color: transparent;
 
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
-        0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 2px 0px rgba(255, 255, 255, 0.12),
+        0px 3px 1px -2px rgba(255, 255, 255, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
 .card {
@@ -110,11 +110,11 @@ audio {
 }
 
 #play-pause {
-    background-color: #506ee5;
+    background-color: #ffffff;
 }
 
 #play-pause:hover {
-    background-color: #506ee5;
+    background-color: #ffffff;
 }
 
 a.btn {
@@ -122,21 +122,21 @@ a.btn {
     margin: none;
     outline: none;
     box-shadow: none;
-    background-color: #506ee5;
-    color: #506ee5;
+    background-color: #ffffff;
+    color: #ffffff;
     text-decoration: none;
 }
 
 a.btn:visited {
     text-decoration: none;
     color: black;
-    background-color: #506ee5;
+    background-color: #ffffff;
 
 }
 
 
 a.btn:hover {
-    background-color: #506ee5;
+    background-color: #ffffff;
     border-radius: none;
     margin: none;
     outline: none;
