--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #cc23ff54;
     font-family: 'Poppins';
     color: #000000
 }
@@ -110,11 +110,7 @@ audio {
 }
 
 #play-pause {
-    background-color: #ffffff;
-}
-
-#play-pause:hover {
-    background-color: #ffffff;
+    background-color: #ffffff00;
 }
 
 a.btn {
@@ -122,7 +118,7 @@ a.btn {
     margin: none;
     outline: none;
     box-shadow: none;
-    background-color: #ffffff;
+    background-color: #ffffff00;
     color: #ffffff;
     text-decoration: none;
 }
@@ -136,7 +132,7 @@ a.btn:visited {
 
 
 a.btn:hover {
-    background-color: #ffffff;
+    background-color: #16161605;
     border-radius: none;
     margin: none;
     outline: none;
