--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ body {
 
 .apresentacao p.on {
     display: flex;
-    font-size: 1em;
+    font-size: .9em;
     text-align: center;
     margin-top: -15px;
     width: 650px;
